fix(wrap): fixed layout issues with media queries

--- a/app/client/stylesheets/components/pu-wrap.sass
+++ b/app/client/stylesheets/components/pu-wrap.sass
@@ -38,9 +38,21 @@
         padding-left: $spacing-app-pagepadding
         padding-right: $spacing-app-pagepadding
 
+        &-modal
+            max-width: grid(6) + $spacing-app-pagepadding * 2
+
+        &-pricing
+            max-width: grid(12) + $spacing-app-pagepadding * 2
+
         &-columnlayout
             max-width: grid(10) + $spacing-app-pagepadding * 2
 
             $columns_threshold: grid(11) + $spacing-app-pagepadding * 2 // Be sure to keep discover-page.js (amountOfColumns helper) up-to-date with this.
             @media screen and (min-width: $columns_threshold)
                 max-width: grid(12) + $spacing-app-pagepadding * 2
+
+        &-error
+            max-width: grid(11) + $spacing-app-pagepadding * 2
+
+        &-home
+            max-width: grid(12) + $spacing-app-pagepadding * 2
